compiler/testData/diagnostics/tests/inference/kt11963.kt
<!MUST_BE_INITIALIZED!>val <<!TYPE_PARAMETER_OF_PROPERTY_NOT_USED_IN_RECEIVER!>T : <!UNRESOLVED_REFERENCE!>KClass<!><T>.<!DEBUG_INFO_MISSING_UNRESOLVED!>something<!><!>> abc<!>